--- a/index.html
+++ b/index.html
@@ -236,11 +236,11 @@
             const date = new Date().toLocaleDateString('en-IN');
             const workerList = selectedWorkers.join('\n• ');
             
-            const message = `🌅 SHIFT START REPORT
+            const message = `SHIFT START REPORT
             
-📅 Date: ${date}
-👨‍💼 Supervisor: ${currentSupervisor}
-👥 Workers Present (${selectedWorkers.length}):
+ Date: ${date}
+ Supervisor: ${currentSupervisor}
+ Workers Present (${selectedWorkers.length}):
 
 • ${workerList}
 
